--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -19,6 +19,21 @@ layout: default
     {% unless page.header.overlay_color or page.header.overlay_image %}
       <h1 class="page__title">{{ page.title }}</h1>
     {% endunless %}
+
+    {%- comment -%}
+    ————— Qui inizia il blocco per il “Published in” —————
+    {%- endcomment -%}
+    {% if page.venue %}
+      {% if page.category == "Work in Progress" %}
+        <p><em>{{ page.venue }}</em></p>
+      {% else %}
+        <p><em>Published in {{ page.venue }}</em></p>
+      {% endif %}
+    {% endif %}
+    {%- comment -%}
+    ————— Fine del blocco “Published in” —————
+    {%- endcomment -%}
+
     {{ content }}
   </div>
 </div>
