--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -1,44 +1,12 @@
 {% include base_path %}
 
-{% if post.header.teaser %}
-  {% capture teaser %}{{ post.header.teaser }}{% endcapture %}
-{% else %}
-  {% assign teaser = site.teaser %}
-{% endif %}
-
-{% if post.id %}
-  {% assign title = post.title | markdownify | remove: "<p>" | remove: "</p>" %}
-{% else %}
-  {% assign title = post.title %}
-{% endif %}
-
 <div class="{{ include.type | default: "list" }}__item">
   <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
-    {% if include.type == "grid" and teaser %}
-      <div class="archive__item-teaser">
-        <img src=
-          {% if teaser contains "://" %}
-            "{{ teaser }}"
-          {% else %}
-            "{{ teaser | prepend: "/images/" | prepend: base_path }}"
-          {% endif %}
-          alt="">
-      </div>
-    {% endif %}
 
     <h2 class="archive__item-title" itemprop="headline">
-      {% if post.link %}
-        <a href="{{ post.link }}">{{ title }}</a>
-        <a href="{{ base_path }}{{ post.url }}" rel="permalink">
-          <i class="fa fa-link" aria-hidden="true" title="permalink"></i>
-          <span class="sr-only">Permalink</span>
-        </a>
-      {% else %}
-        <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
-      {% endif %}
+      <a href="{{ base_path }}{{ post.url }}">{{ post.title }}</a>
     </h2>
 
-    {%- comment -%} ————— Autori ————— {%- endcomment -%}
     {% if post.authors %}
       <p class="archive__item-authors">
         {{ post.authors | join: "; " }}
@@ -47,100 +15,19 @@
       <p class="archive__item-authors">{{ post.author }}</p>
     {% endif %}
 
-    {%- comment -%} ————— Venue / Data ————— {%- endcomment -%}
     {% if post.collection == 'publications' %}
       {% if post.category == "Work in Progress" %}
         <p><i>{{ post.venue }}</i>, {{ post.date | date: "%Y" }}</p>
       {% else %}
         <p>Published in <i>{{ post.venue }}</i>, {{ post.date | date: "%Y" }}</p>
       {% endif %}
-    {% elsif post.collection == 'teaching' %}
-      <p>
-        {{ post.type }}, <i>{{ post.venue }}</i>,
-        {{ post.date | date: "%Y" }}
-      </p>
-    {% elsif post.date %}
-      <p class="page__date">
-        <strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i>
-          {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}
-        </strong>
-        <time datetime="{{ post.date | date_to_xmlschema }}">
-          {{ post.date | date: "%B %d, %Y" }}
-        </time>
-      </p>
     {% endif %}
 
-    {% if post.read_time %}
-      <p class="page__meta">
-        <i class="fa fa-clock" aria-hidden="true"></i>
-        {% include read-time.html %}
-      </p>
-    {% endif %}
+    {# ————— ho rimosso qui ogni blocco `if post.excerpt` ————— #}
 
-    {%- comment -%}
-      Ho rimosso qui completamente il blocco che mostrava {{ post.excerpt }}
-      ————— Excerpt (eliminato) —————
-    {%- endcomment -%}
-
-    {%- comment -%} ————— Download / citation ————— {%- endcomment -%}
-    {% if post.citation and post.paperurl and post.slidesurl and post.bibtexurl %}
-      <p>
-        Recommended citation: {{ post.citation }}<br />
-        <a href="{{ post.paperurl }}">Download Paper</a> |
-        <a href="{{ post.slidesurl }}">Download Slides</a> |
-        <a href="{{ post.bibtexurl }}">Download Bibtex</a>
-      </p>
-    {% elsif post.citation and post.paperurl and post.slidesurl %}
-      <p>
-        Recommended citation: {{ post.citation }}<br />
-        <a href="{{ post.paperurl }}">Download Paper</a> |
-        <a href="{{ post.slidesurl }}">Download Slides</a>
-      </p>
-    {% elsif post.citation and post.paperurl and post.bibtexurl %}
-      <p>
-        Recommended citation: {{ post.citation }}<br />
-        <a href="{{ post.paperurl }}">Download Paper</a> |
-        <a href="{{ post.bibtexurl }}">Download Bibtex</a>
-      </p>
-    {% elsif post.citation and post.paperurl %}
-      <p>
-        Recommended citation: {{ post.citation }}<br />
-        <a href="{{ post.paperurl }}">Download Paper</a>
-      </p>
-    {% elsif post.citation and post.slidesurl and post.bibtexurl %}
-      <p>
-        Recommended citation: {{ post.citation }}<br />
-        <a href="{{ post.slidesurl }}">Download Slides</a> |
-        <a href="{{ post.bibtexurl }}">Download Bibtex</a>
-      </p>
-    {% elsif post.citation and post.slidesurl %}
-      <p>
-        Recommended citation: {{ post.citation }}<br />
-        <a href="{{ post.slidesurl }}">Download Slides</a>
-      </p>
-    {% elsif post.citation and post.bibtexurl %}
-      <p>
-        Recommended citation: {{ post.citation }}<br />
-        <a href="{{ post.bibtexurl }}">Download Bibtex</a>
-      </p>
-    {% elsif post.citation %}
-      <p>Recommended citation: {{ post.citation }}</p>
-    {% elsif post.paperurl and post.bibtexurl %}
-      <p>
-        <a href="{{ post.paperurl }}">Download Paper</a> |
-        <a href="{{ post.bibtexurl }}">Download Bibtex</a>
-      </p>
-    {% elsif post.paperurl %}
+    {# ————— eventuali link Download/Citation ————— #}
+    {% if post.paperurl %}
       <p><a href="{{ post.paperurl }}">Download Paper</a></p>
-    {% elsif post.slidesurl and post.bibtexurl %}
-      <p>
-        <a href="{{ post.slidesurl }}">Download Slides</a> |
-        <a href="{{ post.bibtexurl }}">Download Bibtex</a>
-      </p>
-    {% elsif post.slidesurl %}
-      <p><a href="{{ post.slidesurl }}">Download Slides</a></p>
-    {% elsif post.bibtexurl %}
-      <p><a href="{{ post.bibtexurl }}">Download Bibtex</a></p>
     {% endif %}
 
   </article>
