--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -15,32 +15,60 @@ layout: default
 <div id="main" role="main">
   {% include sidebar.html %}
 
-  <article class="page" itemscope itemtype="http://schema.org/CreativeWork">
-    <header>
-      {% if page.title %}
-        <h1 class="page__title">{{ page.title }}</h1>
-      {% endif %}
-      {% if page.category %}
-        <h2 class="page__subtitle">{{ page.category }}</h2>
-        <hr>
-      {% endif %}
-      {% if page.venue %}
-        <p><em>{{ page.venue }}</em></p>
-      {% endif %}
-      {% if page.authors %}
-        <p>{{ page.authors }}</p>
-      {% endif %}
-      {% if page.date %}
-        <p class="page__date">{{ page.date | date: "%Y" }}</p>
-      {% endif %}
-    </header>
+  {% if page.collection == "publications" %}
+    <!-- Layout per le singole pubblicazioni -->
+    <article class="page pub-page" itemscope itemtype="http://schema.org/ScholarlyArticle">
+      <header>
+        {% if page.title %}
+          <h1 class="page__title">{{ page.title }}</h1>
+        {% endif %}
+        {% if page.category %}
+          <h2 class="page__subtitle">{{ page.category }}</h2>
+          <hr>
+        {% endif %}
+        {% if page.venue %}
+          <p><em>{{ page.venue }}</em></p>
+        {% endif %}
+        {% if page.authors %}
+          <p>{{ page.authors }}</p>
+        {% endif %}
+        {% if page.date %}
+          <p class="page__date">{{ page.date | date: "%Y" }}</p>
+        {% endif %}
+      </header>
+      <section class="page__content" itemprop="text">
+        {{ content }}
+      </section>
+      {% comment %} qui eventualmente i link Download/Citation {% endcomment %}
+    </article>
 
-    <section class="page__content" itemprop="text">
-      <!-- qui viene inserito TUTTO il testo sotto il front‐matter -->
-      {{ content }}
-    </section>
+  {% else %}
+    <!-- Layout generico per CV, pagine, posts… -->
+    <article class="page" itemscope itemtype="http://schema.org/CreativeWork">
+      <header>
+        {% if page.title %}
+          <h1 class="page__title">{{ page.title }}</h1>
+        {% endif %}
+        {% if page.read_time %}
+          <p class="page__meta">
+            <i class="fa fa-clock" aria-hidden="true"></i>
+            {% include read-time.html %}
+          </p>
+        {% endif %}
+        {% if page.date %}
+          <p class="page__date">
+            <strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i>
+              {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}
+            </strong>
+            <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time>
+          </p>
+        {% endif %}
+      </header>
+      <section class="page__content" itemprop="text">
+        {{ content }}
+      </section>
+      {% comment %} eventuali blocchi citation/download per altri tipi di pagina {% endcomment %}
+    </article>
+  {% endif %}
 
-    <!-- qui eventualmente i link Download/Citation -->
-
-  </article>
 </div>
