--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,5 @@
 {% include base_path %}
+<meta name="google-site-verification" content="reJSpx0W0Cns1pqQxlrVbHwAuZfeQpJ0lEDQY-AJ07M" />
 
 <meta charset="utf-8">
 
