--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,25 @@
 <title>Gabriele Tori – Ph.D. Student in Economics</title>
 <meta name="description" content="Gabriele Tori, Ph.D. student in Economics at Emory University. Research on monetary policy, financial history, and macroeconomics.">
 
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Gabriele Tori",
+  "url": "https://gtori7499.github.io",
+  "jobTitle": "Ph.D. Student in Economics",
+  "worksFor": {
+    "@type": "Organization",
+    "name": "Emory University"
+  },
+  "sameAs": [
+    "https://www.linkedin.com/in/tuo-linkedin",
+    "https://github.com/gtori7499",
+    "https://scholar.google.com/citations?user=TUO_ID"
+  ]
+}
+</script>
+
 <link href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ base_path }}/feed.xml{% endif %}"
       type="application/atom+xml"
       rel="alternate"
