--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -49,6 +49,11 @@ layout: default
         {% if page.title %}
           <h1 class="page__title">{{ page.title }}</h1>
         {% endif %}
+        {% unless page.permalink == "/" %}
+         {% if page.title %}
+           <h1 class="page__title">{{ page.title }}</h1>
+         {% endif %}
+       {% endunless %}
         {% if page.read_time %}
           <p class="page__meta">
             <i class="fa fa-clock" aria-hidden="true"></i>
